fix herobody overflow

--- a/src/app/heropage/heropage.component.css
+++ b/src/app/heropage/heropage.component.css
@@ -27,7 +27,7 @@
     justify-content: center;
     align-items: flex-start;
     gap: 20px;
-    /* height: 100%; */
+    height: 100%;
     padding-top: 25%;
 }
 p{
@@ -199,14 +199,14 @@ color: #A9A0AD;
         align-items: center;
     }
 .hero__body{
-    height: 100%;
+    /* height: 100%; */
     padding: 0;
 }
     .hero__container{
         display: flex;
         /* flex-direction: column-reverse; */
         gap: 24px;
-        padding-top: 580px;
+        padding-top: 470px;
     }
     .heading__one{
         font-size: 60px;
